<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/BurlyWood"
    tools:backgroundTintMode="src_atop"
    tools:context=".First">


        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="78dp"
                            android:layout_height="94dp"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button1"
                            app:srcCompat="@android:drawable/ic_menu_search"
                            tools:ignore="OnClick" />

                        <TextView
                            android:id="@+id/button1"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            android:text="@string/add"
                            android:textAlignment="center"

                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.503"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView1"
                            tools:ignore="MissingConstraints,OnClick" />

                        <TextView
                            android:id="@+id/view"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"

                            android:text="@string/view"
                            android:textAlignment="center"

                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.503"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                        <TextView
                            android:id="@+id/EDIT"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"

                            android:text="@string/edit"
                            android:textAlignment="center"

                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.503"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3"
                            app:layout_constraintVertical_bias="1.0"
                            tools:ignore="MissingConstraints,OnClick" />

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="86dp"
                            android:layout_height="75dp"

                            android:layout_marginTop="20dp"
                            android:background="@color/BurlyWood"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@android:drawable/ic_menu_add"
                            tools:ignore="OnClick" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="112dp"
                            android:layout_height="88dp"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/view"
                            app:srcCompat="@android:drawable/ic_menu_agenda"
                            tools:ignore="OnClick" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="78dp"
                            android:layout_height="78dp"
                            android:layout_marginTop="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="onClick"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/EDIT"
                            app:srcCompat="@android:drawable/ic_menu_call"
                            tools:ignore="OnClick" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="20dp"
                            android:textAlignment="center"
                            android:text="@string/PHONEBOOK"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>





